<resources>
    <!-- Keep that commented out. It will lead to compile errors -->
    <!--<string name="app_name">Bluetooth LE Spam</string>-->

    <string name="bottom_nav_start">Info</string>
    <string name="bottom_nav_advertise">Advertise</string>
    <string name="bottom_nav_detect">Detect</string>

    <string name="action_settings">Settings</string>
    <string name="action_set_tx_power">TX Power</string>

    <string name="menu_preferences">Settings</string>
    <string name="menu_start">Start</string>
    <string name="menu_spam_detector">Spam Detector</string>
    <string name="menu_advertisement">Advertisement</string>

    <string name="menu_fastPairing">Google Fast Pairing</string>
    <string name="menu_swiftPair">Microsoft Swift Pairing</string>
    <string name="menu_continuityDevicePopup">Apple Device Popups</string>
    <string name="menu_continuityActionModal">Apple Action Modals</string>
    <string name="menu_kitchenSink">Kitchen Sink (Randomize all)</string>

    <string name="preference_key_use_legacy_advertising">preferenceKeyUseLegacyAdvertising</string>
    <string name="preference_key_interval_advertising_queue_handler">preferenceKeyIntervalAdvertisingQueueHandler</string>
    <string name="preference_title_use_legacy_advertising">Legacy Advertising</string>
    <string name="preference_summary_use_legacy_advertising">Use Bluetooth 4 Compatible BLE Advertising</string>
    <string name="preference_key_dark_mode">preferenceKeyDarkMode</string>
    <string name="preference_title_dark_mode">Dark Mode</string>
    <string name="preference_summary_dark_mode">Force dark theme regardless of system settings</string>

    <string name="power_level_high">High</string>
    <string name="power_level_medium">Medium</string>
    <string name="power_level_low">Low</string>
    <string name="power_level_ultra_low">Ultra Low</string>
    <string name="power_dialog_title">Select TX Power</string>

    <string-array name="spinner_entries_tx_power">
        <item name="tx_power_high">High</item>
        <item name="tx_power_medium">Medium</item>
        <item name="tx_power_low">Low</item>
        <item name="tx_power_ultralow">Ultra Low</item>
    </string-array>

    <string name="startfragment_requirements_checking">Checking Requirements…</string>

    <!-- Advertisement Set Types -->
    <string name="ad_set_type_undefined">Undefined Type</string>
    <string name="ad_set_type_fast_pairing">Fast Pairing</string>
    <string name="ad_set_type_fast_pairing_device">Fast Pairing Device</string>
    <string name="ad_set_type_fast_pairing_non_production">Fast Pairing Non-Production</string>
    <string name="ad_set_type_fast_pairing_phone_setup">Fast Pairing Phone Setup</string>
    <string name="ad_set_type_fast_pairing_debug">Fast Pairing Debug</string>
    <string name="ad_set_type_continuity_new_device">New Apple Device</string>
    <string name="ad_set_type_continuity_new_airtag">New Airtag</string>
    <string name="ad_set_type_continuity_not_your_device">Not Your Device</string>
    <string name="ad_set_type_continuity_action_modals">Apple Action Modal</string>
    <string name="ad_set_type_continuity_ios17_crash">iOS 17 Crash</string>
    <string name="ad_set_type_swift_pairing">Swift Pairing</string>
    <string name="ad_set_type_easy_setup_buds">Easy Setup Buds</string>
    <string name="ad_set_type_easy_setup_watch">Easy Setup Watch</string>
    <string name="ad_set_type_lovespouse_play">Lovespouse Play</string>
    <string name="ad_set_type_lovespouse_stop">Lovespouse Stop</string>

    <string name="spam_unknown">Unknown Spam</string>
    <string name="spam_detecting_title">🔍 Scanning for BLE Spam…</string>
    <string name="spam_detecting_text">Listening for Flipper Zero and spam devices</string>
    <string name="spam_detected_title">⚠️ Spam Device Detected</string>
    <string name="spam_detected_flipper_title">📡 Flipper Zero Detected</string>
    <string name="notification_advertisement_idle">Ready to advertise</string>
    <string name="notification_advertisement_running">Broadcasting…</string>
    <string name="notification_advertisement_paused">Paused</string>
    <string name="notification_scan_devices_found">%1$d device(s) found nearby</string>
    <string name="notification_stop">Stop</string>
    <string name="notification_pause">Pause</string>
    <string name="notification_resume">Resume</string>
</resources>
